removed background fix because it doesn’t work korrekt. added scripts for masonry

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<!--Preloader-->
 		<div class="fakeloader"></div>
 		
-		<div class="backgroundcolor-fix"><p>.</p></div>
+		<!-- <div class="backgroundcolor-fix"><p>.</p></div> -->
 		
 		<!--Navigationsmenue-->
 		<div class="nav-side-menu">
@@ -113,7 +113,7 @@
 		<script src="js/bootstrap.js"></script>
 		<!-- fakeLoader Preloader Simulation -->
 		<script src="js/fakeLoader.js"></script>
-		<!-- fakeLoader Preloader Simulation Configuration -->
+		<!-- fakeLoader  Preloader Simulation Configuration -->
         <script>
             $(document).ready(function(){
                 $(".fakeloader").fakeLoader({
@@ -131,7 +131,7 @@
         		$("#contenthere").load("content/test.html");
     		});
 		</script>
-
+		<script src="js/masonry.pkgd.js"></script>
 
 	<!-- Skripte Ende -->
 	</body>
