--- a/content/kaffee.html
+++ b/content/kaffee.html
@@ -5,28 +5,29 @@
 </div>
 
 <div class="grid">
-  <div class="grid-item"><h1>Kaffee</h1></div>
-  <div class="grid-item grid-item--width2 grid-item--height2"><h1>Kaffee</h1></div>
-  <div class="grid-item grid-item--height3"><h1>Kaffee</h1></div>
-  <div class="grid-item grid-item--height2"><h1>Kaffee</h1></div>
-  <div class="grid-item grid-item--width3"><h1>Kaffee</h1></div>
-  <div class="grid-item"><h1>Kaffee</h1></div>
-  <div class="grid-item"><h1>Kaffee</h1></div>
-  <div class="grid-item grid-item--height2"><h1>Kaffee</h1></div>
-  <div class="grid-item grid-item--width2 grid-item--height3"><h1>Kaffee</h1></div>
-  <div class="grid-item"><h1>Kaffee</h1></div>
-  <div class="grid-item grid-item--height2"><h1>Kaffee</h1></div>
-  <div class="grid-item"><h1>Kaffee</h1></div>
-  <div class="grid-item grid-item--width2 grid-item--height2"><h1>Kaffee</h1></div>
-  <div class="grid-item grid-item--width2"><h1>Kaffee</h1></div>
-  <div class="grid-item"><h1>Kaffee</h1></div>
-  <div class="grid-item grid-item--height2"><h1>Kaffee</h1></div>
-  <div class="grid-item"><h1>Kaffee</h1></div>
-  <div class="grid-item"><h1>Kaffee</h1></div>
-  <div class="grid-item grid-item--height3"><h1>Kaffee</h1></div>
-  <div class="grid-item grid-item--height2"><h1>Kaffee</h1></div>
-  <div class="grid-item"><h1>Kaffee</h1></div>
-  <div class="grid-item"><h1>Kaffee</h1></div>
-  <div class="grid-item grid-item--height2"><h1>Kaffee</h1></div>
+	<div class="grid-sizer"></div>
+  	<div class="grid-item"><h1>Kaffee</h1></div>
+  	<div class="grid-item grid-item--width2 grid-item--height2"><h1>Kaffee</h1></div>
+  	<div class="grid-item grid-item--height3"><h1>Kaffee</h1></div>
+  	<div class="grid-item grid-item--height2"><h1>Kaffee</h1></div>
+  	<div class="grid-item grid-item--width3"><h1>Kaffee</h1></div>
+  	<div class="grid-item"><h1>Kaffee</h1></div>
+  	<div class="grid-item"><h1>Kaffee</h1></div>
+  	<div class="grid-item grid-item--height2"><h1>Kaffee</h1></div>
+  	<div class="grid-item grid-item--width2 grid-item--height3"><h1>Kaffee</h1></div>
+  	<div class="grid-item"><h1>Kaffee</h1></div>
+  	<div class="grid-item grid-item--height2"><h1>Kaffee</h1></div>
+  	<div class="grid-item"><h1>Kaffee</h1></div>
+  	<div class="grid-item grid-item--width2 grid-item--height2"><h1>Kaffee</h1></div>
+  	<div class="grid-item grid-item--width2"><h1>Kaffee</h1></div>
+  	<div class="grid-item"><h1>Kaffee</h1></div>
+  	<div class="grid-item grid-item--height2"><h1>Kaffee</h1></div>
+  	<div class="grid-item"><h1>Kaffee</h1></div>
+  	<div class="grid-item"><h1>Kaffee</h1></div>
+  	<div class="grid-item grid-item--height3"><h1>Kaffee</h1></div>
+  	<div class="grid-item grid-item--height2"><h1>Kaffee</h1></div>
+  	<div class="grid-item"><h1>Kaffee</h1></div>
+  	<div class="grid-item"><h1>Kaffee</h1></div>
+  	<div class="grid-item grid-item--height2"><h1>Kaffee</h1></div>
 </div>
 
